--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
 
       <header> 
-        <h1>NGS Academy for the Africa PGI</h1>
+        <h1>NGS Academy for the Africa Pathogen Genomics Initiative</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
       </header>
 
