--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="./assets/users_guide.pdf" target="_blank" class="button fork"><strong>Download PDF</strong></a>
+        <a href="./assets/users_guide.pdf" target="_blank" class="button fork"><strong>Training Materials</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
