--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,9 @@
 
 
     <script src="js/main.js"></script>
-
+    <script type="application/ld+json">
+        {{ page.bioschemas | jsonify }}
+     </script>
 
 </head>
 <!-- Header Start -->
@@ -128,6 +130,9 @@
                                                 Training Events</a>
                                         </li>
 
+                                        <li><a class="dropdown-item" href="/courses/other-courses">Other Pathogen
+                                                Surveillance Courses</a>
+                                        </li>
                                         <!-- <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
                                         <li><a class="dropdown-item" href="#"> Submenu item 3 </a></li> -->
                                     </ul>
