added survey list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,6 +130,10 @@
                                                 Training Events</a>
                                         </li>
 
+                                        <li><a class="dropdown-item" href="/courses/other-courses">Other Pathogen
+                                                Surveillance Courses</a>
+                                        </li>
+
                                         <!-- <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
                                         <li><a class="dropdown-item" href="#"> Submenu item 3 </a></li> -->
                                     </ul>
