--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -95,6 +95,10 @@
                     <li {% if page.url=="/courses/past-courses/" %} class="sub_color" {% endif %}><a
                             href="{{ site.url }}courses/past-courses/"> Past courses and training events</a></li>
                 </ul>
+                <ul class="courselist indent_sub_list">
+                    <li {% if page.url=="/courses/other-courses/" %} class="sub_color" {% endif %}><a
+                            href="/courses/other-courses/"> Other pathogen surveillance courses </a></li>
+                </ul>
 
             </li>
             <li id="01resource" {% if page.url=="/resources/" %}class="sub_color" {% endif %}> <a
