added pathogen surveilance resources

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -97,7 +97,7 @@
                 </ul>
                 <ul class="courselist indent_sub_list">
                     <li {% if page.url=="/courses/other-courses/" %} class="sub_color" {% endif %}><a
-                            href="/courses/other-courses/"> Other pathogen surveillance courses </a></li>
+                            href="{{ site.url }}/courses/other-courses/"> Other pathogen surveillance courses </a></li>
                 </ul>
 
             </li>
