--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,7 +130,8 @@
                                                 Training Events</a>
                                         </li>
 
-                                        <li><a class="dropdown-item" href="/courses/other-courses">Other Pathogen
+                                        <li><a class="dropdown-item" href="{{ site.url }}/courses/other-courses">Other
+                                                Pathogen
                                                 Surveillance Courses</a>
                                         </li>
 
