--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,9 @@
 
 
     <script src="js/main.js"></script>
+    <script type="application/ld+json">
+        {{ page.bioschemas | jsonify }}
+     </script>
 
 
 </head>
