--- a/css/style.css
+++ b/css/style.css
@@ -1063,3 +1063,20 @@ padding: 10px;
   text-align: left;
   vertical-align: middle;
 }
+
+
+.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open .dropdown-toggle.btn-danger{
+ 
+  background-color: hsl(349.91, 62%, 34%) !important;
+   
+  background-repeat: repeat-x;
+   
+  background-image: linear-gradient(#fbeded, #8c2133);
+   
+  border-color: #8c2133 #8c2133 #8c2133;
+   
+  color: #333 !important;
+   
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.59);
+
+}
