--- a/css/style.css
+++ b/css/style.css
@@ -1041,3 +1041,21 @@ padding: 10px;
 .table-sortable .th-sort-desc {
   background: rgba(0, 0, 0, 0.1);
 }
+
+
+
+.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open .dropdown-toggle.btn-danger{
+ 
+  background-color: hsl(349.91, 62%, 34%) !important;
+   
+  background-repeat: repeat-x;
+   
+  background-image: linear-gradient(#fbeded, #8c2133);
+   
+  border-color: #8c2133 #8c2133 #8c2133;
+   
+  color: #333 !important;
+   
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.59);
+
+}
