added border marron on danger bs buttons

--- a/css/style.css
+++ b/css/style.css
@@ -1062,5 +1062,5 @@ padding: 10px;
 
 .btn-danger{
   background-color: hsl(349.91, 62%, 34%) !important;
-  border-color: white !important;
+  border-color:#8c2133 !important;
 }
