--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,14 +117,17 @@
                                     <a class="nav-link  dropdown-toggle" href="courses"
                                         data-bs-toggle="dropdown-1">Courses</a>
                                     <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/calendar/">
+                                                Calendar</a>
+                                        </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}/courses/upcoming-courses">
                                                 Upcoming
                                                 Courses</a>
                                         </li>
 
-                                        <li><a class="dropdown-item" href="/courses/available-courses">Available
+                                        <!-- <li><a class="dropdown-item" href="/courses/available-courses">Available
                                                 Courses</a>
-                                        </li>
+                                        </li> -->
 
                                         <li><a class="dropdown-item" href="/courses/past-courses"> Past Courses and
                                                 Training Events</a>
