updated urls and added calendar url

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -78,6 +78,12 @@
             <li id="01courselist" {% if page.url=="/courses/" %}class="sub_color" {% endif %} id="left_menu_item"><a
                     href="{{ site.url }}courses/">
                     Courses<span class="sub-arrow"></span></a>
+
+                <ul class="courselist indent_sub_list">
+                    <li {% if page.url=="/calendar/" %} class="sub_color" {% endif %}><a
+                            href="{{ site.url }}calendar/">Calendar </a></li>
+
+                </ul>
                 <ul class="courselist indent_sub_list">
                     <li {% if page.url=="/courses/upcoming-courses/" %} class="sub_color" {% endif %}><a
                             href="{{ site.url }}courses/upcoming-courses/">
@@ -85,11 +91,11 @@
 
                 </ul>
 
-                <ul class="courselist indent_sub_list">
+                <!-- <ul class="courselist indent_sub_list">
                     <li {% if page.url=="/courses/available-courses/" %} class="sub_color" {% endif %}><a
                             href="{{ site.url }}courses/available-courses/"> Available courses </a></li>
 
-                </ul>
+                </ul> -->
 
                 <ul class="courselist indent_sub_list">
                     <li {% if page.url=="/courses/past-courses/" %} class="sub_color" {% endif %}><a
