--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,14 +119,17 @@
                                     <a class="nav-link  dropdown-toggle" href="{{ site.url }}courses/"
                                         data-bs-toggle="dropdown-1">Courses</a>
                                     <ul class="dropdown-menu">
+
+                                        <li><a class="dropdown-item" href="{{ site.url }}calendar/">Calendar</a>
+                                        </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}courses/upcoming-courses/">
                                                 Upcoming
                                                 Courses</a>
                                         </li>
 
-                                        <li><a class="dropdown-item"
+                                        <!-- <li><a class="dropdown-item"
                                                 href="{{ site.url }}courses/available-courses/">Available Courses</a>
-                                        </li>
+                                        </li> -->
 
                                         <li><a class="dropdown-item" href="{{ site.url }}courses/past-courses/"> Past
                                                 Courses and
