added new site name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
             <div class="col-md-12">
                 <div class="name_on_nav text-center">
                     <p>
-                    <h3>NGS Academy for the Africa Pathogen Genomics Initiative</h3>
+                    <h3>NGS Academy for the Africa CDC Pathogen Genomics Initiative</h3>
                     </p>
                 </div>
 
