added link to training survey on main layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,6 +190,9 @@
             <div class="container">
                 <div class="col-sm-2 col-md-2 col-lg-2">
                     {% include side-nav_js.html %}
+                    <hr>
+                    Click <a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH"
+                        class="btn btn-sm btn-default">here</a> for the training survey
 
                 </div>
 
