--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -191,7 +191,7 @@
                 <div class="col-sm-2 col-md-2 col-lg-2">
                     {% include side-nav_js.html %}
                     <hr>
-                    Click <a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH"
+                    Click <a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH" target="_blank"
                         class="btn btn-sm btn-default">here</a> for the training survey
 
                 </div>
