updated json for scchema

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,9 +81,9 @@
             {
               "@type": "CourseInstance",
               "courseMode": "part-time",
-              "endDate": "2017-06-21",
-              "location": "St Brycedale Campus Kirkcaldy",
-              "startDate": "2016-08-31"
+              "endDate": "2022-04-29",
+              "location": "KEMRI / WELLCOME TRUST Kilifi, Kenya",
+              "startDate": "2022-04-25"
             },
             {
               "@type": "CourseInstance",
