added sample expandable data tables

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -234,7 +234,7 @@
                 </div>
 
 
-                <div class="col-lg-10 col-md-10 col-sm-10" class="my-auto">
+                <div class="col-lg-10 col-md-10 col-sm-10 main_container_section" class="my-auto">
                     {{content}}
                 </div>
 
