updated layout page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,8 @@
           "@type": "Course",
           "name": "Advanced Training: Developing Workflows",
           "description": "High-throughput laboratory machines generate large quantities of raw biological data. Processing the data to generate useful information involves using several tools and sometimes setting up complex bioinformatics analysis environments across heterogeneous computing devices. Bioinformatics workflows and workflow managers allow reproducibility and portability of analysis plans and optimization of available computing resources. The Advanced Training: Developing Workflows workshop was aimed at introducing, deploying Nextflow, a too which enables scalable and reproducible scientific workflows. ",
+          
+          <!-- start course instance -->
           "hasCourseInstance": [
             {
               "@type": "CourseInstance",
@@ -84,21 +86,10 @@
               "endDate": "2022-04-29",
               "location": "KEMRI / WELLCOME TRUST Kilifi, Kenya",
               "startDate": "2022-04-25"
-            },
-            {
-              "@type": "CourseInstance",
-              "courseMode": "full-time",
-              "endDate": "2017-06-23",
-              "location": "Halbeath Campus Dunfermline",
-              "startDate": "2016-08-29"
-            },
-            {
-              "courseMode": "full-time",
-              "endDate": "2017-06-23",
-              "location": "St Brycedale Campus Kirkcaldy",
-              "startDate": "2016-08-29"
             }
+
           ]
+          <!-- end course instance -->
         }
         </script>
 
