final json file fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,26 +71,28 @@
 
     <script src="js/main.js"></script>
     <script type="application/ld+json">
+    
         {
-          "@context": "https://schema.org/",
-          "@id": "./",
-          "@type": "Course",
-          "name": "Advanced Training: Developing Workflows",
-          "description": "High-throughput laboratory machines generate large quantities of raw biological data. Processing the data to generate useful information involves using several tools and sometimes setting up complex bioinformatics analysis environments across heterogeneous computing devices. Bioinformatics workflows and workflow managers allow reproducibility and portability of analysis plans and optimization of available computing resources. The Advanced Training: Developing Workflows workshop was aimed at introducing, deploying Nextflow, a too which enables scalable and reproducible scientific workflows. ",
+            "@context": "https://schema.org/",
+            "@id": "./",
+            "@type": "Course",
+            "name": "Advanced Training: Developing Workflows",
+            "description": "High-throughput laboratory machines generate large quantities of raw biological data. Processing the data to generate useful information involves using several tools and sometimes setting up complex bioinformatics analysis environments across heterogeneous computing devices. Bioinformatics workflows and workflow managers allow reproducibility and portability of analysis plans and optimization of available computing resources. The Advanced Training: Developing Workflows workshop was aimed at introducing, deploying Nextflow, a too which enables scalable and reproducible scientific workflows. ",
+            
+            "hasCourseInstance": 
+            [
+              {
+                "@type": "CourseInstance",
+                "courseMode": "part-time",
+                "endDate": "2022-04-29",
+                "location": "KEMRI / WELLCOME TRUST Kilifi, Kenya",
+                "startDate": "2022-04-25"
+              },
           
-          <!-- start course instance -->
-          "hasCourseInstance": [
-            {
-              "@type": "CourseInstance",
-              "courseMode": "part-time",
-              "endDate": "2022-04-29",
-              "location": "KEMRI / WELLCOME TRUST Kilifi, Kenya",
-              "startDate": "2022-04-25"
-            }
-
-          ]
-          <!-- end course instance -->
-        }
+  
+            ]
+      
+          }
         </script>
 
 </head>
