--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,8 @@ font header .navbar-default .navbar-nav li a:hover {
 #global-header .block {
   color: white;
   margin: 0 auto;
-  padding-left: 4px;
+  padding-left: 2px;
+  padding-right: 9px;
   text-align: center;
 }
 
