added new pages on resources tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
     <script src="js/min/waypoints.min.js"></script>
     <script src="js/jquery.counterup.js"></script>
     <script type="text/javascript" src="js/bootstrap-sidermenu.js"></script>
-
+    <script src="js/jquery.dataTables.js"></script>
     <!-- Google Map -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
     <script src="js/google-map-init.js"></script>
@@ -175,8 +175,14 @@
 
                                 <li class="nav-item dropdown" {% if page.url=="/resources/" %}class="active" {% endif
                                     %}><a class="nav-link  dropdown-toggle" href="{{ site.url }}resources"
-                                        data-bs-toggle="dropdown-1">Resources</a>
+                                        data-bs-toggle="dropdown-1"> Tools & Resources</a>
                                     <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="{{ site.url }}resources/training-materials/">
+                                            Training Materials</a>
+                                    </li>
+                                        <li><a class="dropdown-item" href="{{ site.url }}resources/pha4ge/">
+                                            PHA4GE</a>
+                                    </li>
                                         <li><a class="dropdown-item" href="{{ site.url }}resources/publications/">
                                                 Publications</a>
                                         </li>
