--- a/css/style.css
+++ b/css/style.css
@@ -1222,3 +1222,35 @@ div {
 
   min-height: 50vh;
 }
+
+/* 
+css underline on hoover */
+a {
+  position: relative;
+  color: #8c2133;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #8c2133;
+}
+
+a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  /* left: 0; */
+  background-color:#8c2133;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
+
+/* 
+css underline on hoover */
