updated tools and resources

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -224,8 +224,10 @@
                         <div>
                             {% include side-nav_js.html %}
                             <hr>
+
+                                <div>
                             Click <a href="https://redcap.h3abionet.org/redcap/surveys/?s=FCA9MTKHPH"
-                                class="btn btn-sm btn-default">here</a> for the training survey
+                                class="btn btn-sm btn-default">here</a> for the training survey</div>
 
                         </div>
                     </div>
