fixed typos and broken links to files

--- a/_includes/side-nav_js.html
+++ b/_includes/side-nav_js.html
@@ -108,7 +108,7 @@
 
             </li>
             <li id="01resource" {% if page.url=="/resources/" %}class="sub_color" {% endif %}> <a
-                    href="{{ site.url }}resources/">Toools & Resources
+                    href="{{ site.url }}resources/">Tools & Resources
                     <span class="sub-arrow"></span></a>
                 <ul class="resourcelist indent_sub_list">
                     <li {% if page.url=="/resources/training-materials/" %} class="sub_color" {% endif %}><a
