added new bio informatics profile page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,6 +176,9 @@
                                                 Pathogen
                                                 Surveillance Courses</a>
                                         </li>
+                                        <li><a class="dropdown-item" href="{{ site.url }}/courses/bioinformatics-profiles">
+                                        Bioinformatics Profiles</a>
+                                    </li>
 
                                         <!-- <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
                                         <li><a class="dropdown-item" href="#"> Submenu item 3 </a></li> -->
