fixed bioinfor profiles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -161,11 +161,11 @@
                                                 Training Events</a>
                                         </li>
 
-                                        <li><a class="dropdown-item" href="{{ site.url }}/courses/other-courses">Other
+                                        <li><a class="dropdown-item" href="{{ site.url }}courses/other-courses">Other
                                                 Pathogen
                                                 Surveillance Courses</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="{{ site.url }}/courses/bioinformatics-profiles/">
+                                        <li><a class="dropdown-item" href="{{ site.url }}courses/bioinformatics-profiles/">
                                             Bioinformatics Profiles</a>
                                     </li>
 
